# EncodEval

./: .gitignore  README.md  dl_data.py  evaluation.py  get_results.py  launch_xp_eval.py  main.py  pyproject.toml  run.sh  run_biqwen_evaluation.sh  run_eurobert_evaluation.sh  run_eurobert_evaluation_optimized.sh  run_qwen3_evaluation.sh  squeue  test_ranking.py
configs/retrieval_tasks/: example_eval.yaml  example_eval.yaml.backup  example_train.yaml  example_train.yaml.backup  miracl_eval_no_finetune.yaml  miracl_eval_qwen3.yaml  msmarco_train.yaml  msmarco_train_qwen3.yaml  msmarco_train_qwen3_lasttoken.yaml  msmarco_train_qwen3_lasttoken_simple.yaml
configs/sequence_classification_tasks/: amazon_massive_intent.yaml  amazon_massive_intent.yaml.backup  amazon_massive_intent_qwen3.yaml  amazon_reviews_classification.yaml  amazon_reviews_classification.yaml.backup  amazon_reviews_classification_qwen3.yaml  example.yaml  fix_config.py  paws_x.yaml  paws_x.yaml.backup  paws_x_qwen3.yaml  xnli.yaml  xnli.yaml.backup  xnli_qwen3.yaml
configs/sequence_regression_tasks/: example.yaml  example.yaml.backup  seahorse.yaml  seahorse_qwen3.yaml
configs/token_classification_tasks/: example.yaml  example.yaml.backup  ner_qwen3.yaml  ner_qwen3.yaml.backup  ner_qwen3_old.yaml
encodeval/: apply_language_filter.py  config_loader.py  configuration_biqwen.py  datasets.py  language_config.py  modeling_biqwen.py  system_ranking.py
encodeval/eval_tasks/: __init__.py  abstract_eval.py  retrieval_eval.py  sequence_classification_eval.py  sequence_regression_eval.py  token_classification_eval.py
results/toy/model1/IR/dataset_ir/hyperparam1/: results.json
results/toy/model1/IR/dataset_ir/hyperparam2/: results.json
results/toy/model1/IR/dataset_ir/hyperparam3/: results.json
results/toy/model1/SC/dataset_sc/hyperparam1/: results.json
results/toy/model1/SC/dataset_sc/hyperparam2/: results.json
results/toy/model1/SC/dataset_sc/hyperparam3/: results.json
results/toy/model1/SR/dataset_sr/hyperparam1/: results.json
results/toy/model1/SR/dataset_sr/hyperparam2/: results.json
results/toy/model1/SR/dataset_sr/hyperparam3/: results.json
results/toy/model1/TC/dataset_tc/hyperparam1/: results.json
results/toy/model1/TC/dataset_tc/hyperparam2/: results.json
results/toy/model1/TC/dataset_tc/hyperparam3/: results.json
results/toy/model2/IR/dataset_ir/hyperparam1/: results.json
results/toy/model2/IR/dataset_ir/hyperparam2/: results.json
results/toy/model2/IR/dataset_ir/hyperparam3/: results.json
results/toy/model2/SC/dataset_sc/hyperparam1/: results.json
results/toy/model2/SC/dataset_sc/hyperparam2/: results.json
results/toy/model2/SC/dataset_sc/hyperparam3/: results.json
results/toy/model2/SR/dataset_sr/hyperparam1/: results.json
results/toy/model2/SR/dataset_sr/hyperparam2/: results.json
results/toy/model2/SR/dataset_sr/hyperparam3/: results.json
results/toy/model2/TC/dataset_tc/hyperparam1/: results.json
(+14 files in other folders)
