[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodeval"
version = "0.9"
authors = [
  { name = "Hippolyte Gisserot-Boukhlef", email = "hippolte.gisserotboukhlef@gmail.com" },
  { name = "Nicolas Boizard", email = "nicolas.bzrd@gmail.com" },
  { name = "Duarte Alves", email = "duartemalves@tecnico.ulisboa.pt" },
]
description = "Library to fine-tune and evaluate general purpose pre-trained encoder models."
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "configue==6.0.0",
  "datasets==3.3.2",
  "fire==0.6.0",
  "numpy==2.2.4",
  "pandas==2.2.3",
  "sentence-transformers==3.4.1",
  "torch==2.4.1",
  "transformers==4.49.0",
]

[project.optional-dependencies]
kernel = [
  "flash_attn==2.7.4",
]

[project.urls]
Homepage = "https://github.com/hgissbkh/EncodEval"
Issues = "https://github.com/hgissbkh/EncodEval/issues"