[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodeval"
version = "0.9"
authors = [
  { name = "Hippolyte Gisserot-Boukhlef", email = "hippolte.gisserotboukhlef@gmail.com" },
  { name = "Nicolas Boizard", email = "nicolas.bzrd@gmail.com" },
  { name = "Duarte Alves", email = "duartemalves@tecnico.ulisboa.pt" },
]
description = "Library to fine-tune and evaluate general purpose pre-trained encoder models."
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "accelerate==0.34.2";
  "configue==5.0.0",
  "datasets==2.21.0",
  "fire==0.6.0",
  "numpy==1.26.3",
  "pandas==2.2.3",
  "sentence-transformers==3.4.1",
  "tensorboard==2.18.0",
  "torch==2.4.1",
  "transformers==4.48.3",
]

[project.optional-dependencies]
kernel = [
  "flash_attn==2.7.4",
]

[project.urls]
Homepage = "https://github.com/hgissbkh/EncodEval"
Issues = "https://github.com/hgissbkh/EncodEval/issues"